manifests/deploy-acmeair-authservice-java.yaml
###### Main Service ######
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acmeair-authservice
  namespace: acmeair
spec:
  replicas: 1
  selector:
    matchLabels:
      name: acmeair-auth-deployment
  template:
    metadata:
      labels:
        name: acmeair-auth-deployment
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9080"
    spec:
      containers:
      - name: acmeair-authservice-java
        image: acmeair-authservice-java:test
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 9080
          - containerPort: 9443
---
apiVersion: v1
kind: Service
metadata:
  name: acmeair-auth-service
  namespace: acmeair
spec:
  ports:
  - protocol: TCP
    port: 9080
    targetPort: 9080
  selector:
    name: acmeair-auth-deployment
